fixed horizontal scrolling

--- a/resources/css/basic.css
+++ b/resources/css/basic.css
@@ -15,8 +15,7 @@
 body{
    
     
-    overflow: hidden;
-   
+    overflow-x: hidden;
     background-color: #fafbfc;
     color: #4b5563;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
